# compressor

./: .gitignore  Cargo.toml  Makefile  README.md  bundler.toml  plot.py
.github/workflows/: build.yml  readme-Linux.txt  readme-Windows.txt  readme-macOS.txt
src/: compressor.rs  csv_debugging.rs  editor.rs  lib.rs  main.rs
src/editor/: knob.rs  scope.rs  scopes.rs  sineview.rs  stylesheet.css
tools/: plot.py
