[package]
name = "compressor"
version = "0.1.0"
edition = "2021"
authors = ["Pieter Staal"]
description = ""

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
csv = "1.1"
rand = "0.8.5"
femtovg = { git = "https://github.com/rhelmot/femtovg", branch = "cosmic", default-features = false, features = ["image-loading"] }
llad = { git = "https://github.com/PietPtr/LLAD.git" }

[features]
detailed_debugging = []

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
